# rpg-boilerplate

./: README.md  pyproject.toml  requirements.txt
src/: app.py  main.py
src/domains/: account.py  base.py  entity.py  item.py  life_skill.py  npc.py  player.py  stats.py
src/repositories/: __init__.py  base_repository.py  item_repository.py  player_repository.py
src/services/: __init__.py  game_service.py  harvest_service.py  player_service.py
src/static/: index.html
src/static/css/: style.css
src/static/js/: api.js  canvas.js  game.js  main.js  render.js  ui.js
src/templates/: admin.html
